name:                TinyBitcode
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            https://github.com/lichtzwerge/TinyBitcode#readme
license:             BSD3
license-file:        LICENSE
author:              Moritz Angermann
maintainer:          moritz@lichtzwerge.de
copyright:           lichtzwerge GmbH
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Data.BitCode
                     , Data.BitCode.Writer
                     , Data.BitCode.Writer.Monad
                     , Data.BitCode.Writer.Combinators
                     , Data.BitCode.Writer.ToBits
                     , Data.BitCode.Reader
                     , Data.BitCode.Reader.Monad
                     , Data.BitCode.Reader.Combinators
                     , Data.BitCode.Reader.FromBits
                     , Data.BitCode.AbbrevOpEncoding
                     , Data.BitCode.Codes.BlockInfo
                     , Data.BitCode.IDs.FixedAbbrev
                     , Data.BitCode.IDs.StandardBlock
                     -- * LLVM
                     , Data.BitCode.LLVM
                     , Data.BitCode.LLVM.FromBitCode
                     , Data.BitCode.LLVM.IDs.Blocks
                     , Data.BitCode.LLVM.Codes.Identification
  build-depends:       base >= 4.7 && < 5
                     , bytestring >= 0.10
                     , base16-bytestring
                     , pretty >= 1.1
                     , llvm-pretty
  default-language:    Haskell2010

executable TinyBitcodeReader
  hs-source-dirs:      playground
  main-is:             Reader.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , TinyBitcode
  default-language:    Haskell2010

-- executable TinyBitcode-exe
--  hs-source-dirs:      app
  -- main-is:             Main.hs
  -- ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  -- build-depends:       base
  --                    , TinyBitcode
  -- default-language:    Haskell2010

test-suite TinyBitcode-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , TinyBitcode
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

test-suite TinyBitcode-doctest
  type:              exitcode-stdio-1.0
  default-language:  Haskell2010
  ghc-options:       -Wall -Werror -O2 -Wall -threaded -rtsopts -with-rtsopts=-N
  hs-source-dirs:    test
  main-is:           Doctest.hs
  build-depends:     base >= 4.8 && < 5
                   , doctest >=0.10
                   , Glob >= 0.7
                   , QuickCheck >= 2.5
                   , TinyBitcode

benchmark TinyBitcode-benchmark
  type:              exitcode-stdio-1.0
  default-language:  Haskell2010
  ghc-options:       -Wall -Werror -O2 -Wall -threaded -rtsopts -with-rtsopts=-N
  hs-source-dirs:    benchmark
  main-is:           Main.hs
  build-depends:     base >= 4.8 && < 5
                   , criterion >= 1.1
                   , TinyBitcode

source-repository head
  type:     git
  location: https://github.com/lichtzwerge/TinyBitcode
